# NAME

./: CURSOR_MCP_TROUBLESHOOTING.md  ENHANCEMENT_RECOMMENDATIONS.md  FINAL_STRANDS_MCP_INTEGRATION.md  MCP_CURSOR_FIX.md  MCP_INTEGRATION_FIX.md  OPTIMIZATION_SUMMARY.md  README.md  README_OPTIMIZED.md  STRANDS_MCP_INTEGRATION_SUMMARY.md  TAIWANESE_AMERICAN_DIASPORA_FIX.md  debug_mcp_server.py  debug_ollama.py  flask_mcp_streamable.py  mcp_server_proper.py  mock_watchlist_traceability_report_20250820_010011.json  name_generation.db  performance_optimization_guide.md  port_manager.py  pyproject.toml  start_api_server.py  start_complete_system.py  start_services_simple.py  strands_mcp_client.py  strands_mcp_example.py  strands_mcp_integration.py  strands_mcp_server.py  strands_mcp_tools.py  strands_tools.py  test_cursor_mcp.py  test_cursor_mcp_discovery.py  test_final_strands_mcp.py  test_mcp_connection.py  test_mcp_connectivity.py  test_mcp_integration.py  test_mcp_protocol.py  test_mock_true_positive.py  test_strands_decorator.py  test_strands_mcp_integration.py  test_strands_tools_simple.py  test_true_positive_watchlist.py  (+2 more)
docs/: input_field_weights.md  mcp_tools_overview.md  project.md  watchlist_validation_guide.md
docs/templates/: toolcard
docs/tools/: README.md  generate_cultural_names.md  get_cultural_context.md  validate_names_watchlist.md
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Header.js  IdentityGenerator.js  SimpleTest.js  TraceabilityView.js
python_frontend/: app.py
python_frontend/static/css/: style.css
python_frontend/static/js/: app.js
python_frontend/templates/: index.html
src/: __init__.py
src/api/: __init__.py  main.py  mcp_server.py  server.py
src/config/: __init__.py  ports.py
src/core/: __init__.py  ethnicity_mapper.py  identity_generator.py  locality_agent.py  models.py  name_generator.py  validation_agent.py
src/database/: database.py  models.py
src/services/: __init__.py  ollama_cultural_service.py
src/services/ai/: __init__.py  mcp_integration.py  ollama_client.py  real_mcp_client.py  strands_agent.py  strands_mcp_client.py
src/services/validation/: watchlist_validator.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py  run_tests.py  test_api_endpoints.py  test_mcp_connection.py  test_mcp_integration.py  test_strands_agent.py
